--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Work Sans", sans-serif;
+  background-color: #371B58;
+  color:white
 }
 
 html {
@@ -17,7 +18,8 @@ body {
   justify-content: center;
   align-items: center;
   align-self: center;
-  background: rgb(255 255 255);
+  background-color: #371B58;
+  color: white;
 }
 
 .container {
@@ -26,7 +28,7 @@ body {
 }
 
 h2 {
-  color: rgb(43 45 56);
+  
   text-align: center;
   font-size: 48px;
   letter-spacing: -0.2px;
@@ -74,7 +76,7 @@ p,
 
 button {
   /* position: absolute; */
-  background: rgb(17 166 131);
+  background: #7858A6;
   color: rgb(255 255 255);
   border-radius: 6px;
   padding: 16px 32px;
@@ -106,6 +108,7 @@ button:hover {
   }
 
   h2 {
+    font-family: 'Bruno Ace SC', cursive;
     font-size: 28px;
   }
 
